# AI-Stock-Predictor

./: .env  .gitignore  LICENSE.txt  README.md  TimeSeriesSplit_test.py  ^TWII_daily_features.csv  analyzer.py  config.py  daily_tech_factor.py  deduplicator.py  factors.py  fetcher.py  main.py  model.py  news_to_index.py  predict_model.py  pyproject.toml  requirements.txt  train_model.py
data/: ^TWII_daily_features.csv  pending_news.json  simple_factor_model.joblib
misc/: test.py  test2.py  test3.py
model/: first_train_data.csv  scaler.save  simple_factor_model.joblib
scripts/: collect_features.py  predict.py  train.py  train_cv.py
src/: analyzer.py  config.py  deduplicator.py  fetcher.py  market_calendar.py  model.py  tech_factors.py
