[project]
name = "ai-stock-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "groq>=0.25.0",
    "matplotlib>=3.10.3",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "yfinance>=0.2.61",
]
